[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/popups/popup_base/PopupBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/common/button_base/icons/icon_upgrades.png" type="Texture" id=2]
[ext_resource path="res://ui/popups/popup_perm_upgrades/PopupPermUpgrades.gd" type="Script" id=3]
[ext_resource path="res://ui/common/button_big/ButtonBig.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/common/button_base/icons/icon_mutation_hunger.png" type="Texture" id=5]
[ext_resource path="res://ui/common/button_base/ButtonBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/common/button_base/icons/icon_accept.png" type="Texture" id=7]
[ext_resource path="res://ui/common/button_base/icons/icon_mutation_growth.png" type="Texture" id=8]
[ext_resource path="res://ui/common/button_base/icons/icon_mutation_magic.png" type="Texture" id=9]
[ext_resource path="res://ui/common/button_base/icons/icon_mutation_speed.png" type="Texture" id=10]

[node name="PopupPermUpgrades" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Vbox" parent="MargCont" index="0"]
custom_constants/separation = 12

[node name="Icon" parent="MargCont/Vbox" index="0"]
texture = ExtResource( 2 )

[node name="Title" parent="MargCont/Vbox" index="1"]
margin_top = 140.0
margin_bottom = 206.0
bbcode_text = "[center][color=red][shake level=10]Starting xxxxx"
text = "Starting xxxxx"

[node name="Content" parent="MargCont/Vbox" index="2"]
margin_top = 218.0
margin_bottom = 1076.0
custom_constants/separation = 12

[node name="RowLabel" type="HBoxContainer" parent="MargCont/Vbox/Content" index="0"]
margin_right = 656.0
margin_bottom = 65.0
alignment = 1

[node name="CoinLabel" type="Label" parent="MargCont/Vbox/Content/RowLabel" index="0"]
modulate = Color( 1, 1, 0.580392, 1 )
margin_right = 326.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "Coins: XXX"
align = 1

[node name="CostLabel" type="Label" parent="MargCont/Vbox/Content/RowLabel" index="1"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 330.0
margin_right = 656.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "Cost: 203"
align = 1

[node name="Row1" type="HBoxContainer" parent="MargCont/Vbox/Content" index="1"]
margin_top = 77.0
margin_right = 656.0
margin_bottom = 460.0
custom_constants/separation = 32
alignment = 1

[node name="Button1" parent="MargCont/Vbox/Content/Row1" index="0" instance=ExtResource( 4 )]
margin_right = 312.0
margin_bottom = 383.0
icon = ExtResource( 10 )
text = "[center]2% more speed"

[node name="Button2" parent="MargCont/Vbox/Content/Row1" index="1" instance=ExtResource( 4 )]
margin_left = 344.0
margin_right = 656.0
margin_bottom = 383.0
icon = ExtResource( 9 )
text = "[center]2% faster skills reload speed"

[node name="Row2" type="HBoxContainer" parent="MargCont/Vbox/Content" index="2"]
margin_top = 472.0
margin_right = 656.0
margin_bottom = 855.0
custom_constants/separation = 32
alignment = 1

[node name="Button3" parent="MargCont/Vbox/Content/Row2" index="0" instance=ExtResource( 4 )]
margin_right = 312.0
margin_bottom = 383.0
icon = ExtResource( 8 )
text = "[center]Get 2 size every 10 seconds"

[node name="Button4" parent="MargCont/Vbox/Content/Row2" index="1" instance=ExtResource( 4 )]
margin_left = 344.0
margin_right = 656.0
margin_bottom = 383.0
icon = ExtResource( 5 )
text = "[center]2% more food when eating"

[node name="Buttons" parent="MargCont/Vbox" index="3"]
margin_top = 1088.0

[node name="AcceptButton" parent="MargCont/Vbox/Buttons" index="0" instance=ExtResource( 6 )]
margin_left = 264.0
margin_right = 392.0
icon = ExtResource( 7 )
